Fix bug display history by monthly complete.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByDay.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Matches/HistoryByDay.html
@@ -1,5 +1,5 @@
 ﻿<ion-view view-title="DAILY SOCCER">
-    <ion-content class="today-match">
+    <ion-content class="today-match" ng-controller="starter.history.HistoryDailyController as historyCtrl">
         <div ng-include src="'templates/Matches/_matchHeaderAds.html'" class="padding-bottom"></div>
         <ion-list>
             <div ng-repeat="history in historyCtrl.HistoryByMonthInfo.Histories" class="padding-bottom">
