--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Accounts/Login.html
@@ -1,13 +1,4 @@
 ﻿<ion-view class="bg-main scroll-middle" ng-init="accountCtrl.CheckLocalStorageAccount()">
-        <!--<div class="row row-center">
-            <div class="col col-center">
-                <div class="space-top">
-                    <img class="col-67" src="img/Logos/LogoLogin.png" />
-                </div>
-                <br />
-                <button ng-click="accountCtrl.LoginWithFacebook()" class="button col col-80 block-center button-calm">เข้าใช้งานผ่าน Facebook</button>
-            </div>
-        </div>-->
         <ion-content has-header="true" padding="true">
             <div class="row row-center">
                 <div class="col col-center">
@@ -22,7 +13,7 @@
                 </div>
             </div>
         </ion-content>
-    <ion-footer-bar align-title="left" class="bar-balanced" ng-class="{hide: accountCtrl.isHideSkipButton}">
+    <ion-footer-bar align-title="left" class="bar-balanced" ng-hide="accountCtrl.isHideSkipButton">
         <h1 class="title text-right">
             <a menu-close ng-click="accountCtrl.SkipLogin()" href="#">
                 เริ่มต้นใช้งาน >>
