Fix floating points in the buy ticket complete.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
@@ -6,7 +6,7 @@
                 แต้มสะสมทั้งหมด {{ sidemenuCtrl.accountSvc.GetAccountInformation().Points }} คะแนน
             </p>
             <p>
-                แลกคูปองได้สูงสุด {{ sidemenuCtrl.accountSvc.GetAccountInformation().Points / sidemenuCtrl.accountSvc.CurrentTicketCost | number : 0 }} ใบ
+                แลกคูปองได้สูงสุด {{ sidemenuCtrl.CalculateBuyTicket() | number : 0 }} ใบ
             </p>            
         </div>
         <br />
