--- a/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/Index.cshtml
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/Index.cshtml
@@ -21,7 +21,7 @@
             <td>@rewardGroup.ExpiredDate</td>
             <td>@rewardGroup.RequestPoints</td>
             <td><a href="@Url.Action("Details", new { id = rewardGroup.Id })"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-            <td><a href="@Url.Action("Details", new { id = rewardGroup.Id })"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+            <td><a href="@Url.Action("RewardList", "Winner", new { id = rewardGroup.Id })"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
         </tr>
     }
 </table>
