--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicket.html
@@ -1,12 +1,12 @@
-﻿<ion-view view-title="DAILY SOCCER">
+﻿<ion-view view-title="DAILY SOCCER" name="MainContent">
     <ion-content>
         <br />
         <div class="col col-80 col-offset-10">
             <p>
-                แต้มสะสมทั้งหมด {{ sidemenuCtrl.accountSvc.GetAccountInformation().Points }} คะแนน
+                แต้มสะสมทั้งหมด {{ ticketCtrl.accountSvc.GetAccountInformation().Points }} คะแนน
             </p>
             <p>
-                แลกคูปองได้สูงสุด {{ sidemenuCtrl.CalculateBuyTicket() | number : 0 }} ใบ
+                แลกคูปองได้สูงสุด {{ ticketCtrl.CalculateBuyTicket() | number : 0 }} ใบ
             </p>            
         </div>
         <br />
@@ -20,7 +20,7 @@
                 </p>
             </div>
             <div class="col row">
-                <div class="button bg-yellow col col-50 button-small block-center" ng-click="sidemenuCtrl.BuyTicket(amountCoupon)">
+                <div class="button bg-yellow col col-50 button-small block-center" ng-click="ticketCtrl.BuyTicket(amountCoupon)">
                     ส่งคูปองลุ้นรางวัล
                 </div>
             </div>
