--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketCompleted.html
@@ -4,10 +4,10 @@
             คุณเหลือแต้มที่ใช้ได้
         </p>
         <p class="font-large">
-            {{ ticketCtrl.RemainingPoints }} แต้ม
+            {{ buyTicketCompleteCtrl.accountManagementSvc.GetAccountInformation().Points }} แต้ม
         </p>
         <br />
-        <p>รอประกาศผลรายชื่อผู้โชคดี <br /> ในวันที่ {{ ticketCtrl.ExpiredDate | date: 'longDate' }} <br /> ขอบพระคุณที่ร่วมสนุกกับเรา</p>
+        <p>รอประกาศผลรายชื่อผู้โชคดี <br /> ในวันที่ {{ buyTicketCompleteCtrl.$stateParams.expiredDate | date: 'longDate' }} <br /> ขอบพระคุณที่ร่วมสนุกกับเรา</p>
     </ion-content>
     <ion-footer-bar align-title="left" class="bar-balanced">
         <h1 class="title text-right">
