--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/SideMenu.html
@@ -57,7 +57,7 @@
                 </div>
                 
             </ion-item>
-            <ion-item menu-close href="#" class="item-royal" ng-click="sidemenuCtrl.Logout()" ng-show="sidemenuCtrl.isLogedin">
+            <ion-item menu-close href="#" class="item-royal" ng-click="sidemenuCtrl.Logout()" ng-show="sidemenuCtrl.IsLogedIn()">
                 <div class="text-gray">
                     <i>
                         <img class="vertical-middle"  height="36" src="img/Icons/MenuIcon5x1.png" bh-src-responsive="[ [ 'small', 'img/Icons/MenuIcon5x2.png' ], [ 'medium', 'img/Icons/MenuIcon5x3.png' ], [ 'retina', 'img/Icons/MenuIcon5x3.png' ] ]"/>
@@ -68,7 +68,7 @@
                 </div>                
             </ion-item>
 
-            <a ng-hide="sidemenuCtrl.isLogedin" class="button button-block bg-gray text-dark" href="#" ng-click="sidemenuCtrl.LoginWithFacebookPopup()">เข้าสู่ระบบ</a>
+            <a ng-show="!sidemenuCtrl.IsLogedIn()" class="button button-block bg-gray text-dark" href="#" ng-click="sidemenuCtrl.LoginWithFacebookPopup()">เข้าสู่ระบบ</a>
 
             <div class="space-top">
                 <a menu-close class="button button-block button-balanced " href="#/underconstruction/underconstruction">
