--- a/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketProcessing.html
+++ b/src/DailySoccerSolution/DailySoccerMobile/www/templates/Rewards/BuyTicketProcessing.html
@@ -1,6 +1,12 @@
-﻿<ion-view view-title="DAILY SOCCER">
+﻿<ion-view view-title="DAILY SOCCER" class="scroll-middle">
     <ion-content>
-        <p>Processing</p>
-        <ion-spinner icon="ripple" class="spinner-assertive"></ion-spinner>
+        <div class="row row-center">
+            <div class="col col-center">
+                <div>
+                    <h1>Processing</h1>
+                    <ion-spinner icon="ripple" class="spinner-assertive"></ion-spinner>
+                </div>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
