--- a/src/DailySoccerSolution/DailySoccerBackoffice/Views/Shared/_Layout.cshtml
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/Views/Shared/_Layout.cshtml
@@ -19,21 +19,18 @@
                 </button>
                 @Html.ActionLink("Dailysoccer Admin", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
+            @*<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("ของรางวัล", "Index", "Reward")</li>
-                    <li>@Html.ActionLink("ผู้โชคดี", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
-            </div>
+            </div>*@
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Dailysoccer</p>
         </footer>
     </div>
 
