--- a/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/Create.cshtml
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/Create.cshtml
@@ -4,18 +4,17 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>เพิ่มรอบการจับรางวัล</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RewardGroupInformation</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.ExpiredDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class = "control-label col-md-2">วันจับรางวัล</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ExpiredDate, new { htmlAttributes = new { @class = "form-control", @id = "datepicker" } })
                 @Html.ValidationMessageFor(model => model.ExpiredDate, "", new { @class = "text-danger" })
@@ -23,15 +22,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.RequestPoints, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequestPoints, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequestPoints, "", new { @class = "text-danger" })
+            <div class="control-label col-md-2">คะแนนที่ใช้แลก</div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.RequestPoints, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RequestPoints, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="ยืนยัน" class="btn btn-default" />
             </div>
         </div>
     </div>
