--- a/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/CreateReward.cshtml
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/Views/Reward/CreateReward.cshtml
@@ -4,18 +4,17 @@
     ViewBag.Title = "CreateReward";
 }
 
-<h2>CreateReward</h2>
+<h2>เพิ่มของรางวัล</h2>
 
 @using (Html.BeginForm("CreateReward", "Reward", FormMethod.Post, new { id = ViewBag.Id, enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RewardInformation</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class = "control-label col-md-2">ชื่อ</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
@@ -23,7 +22,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">รายละเอียด</div>
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
@@ -31,14 +30,14 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">จำนวน</div>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.ThumbnailPath, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">รูป</div>
             <div class="col-md-10">
                 <input type="file" name="ThumbnailPath" id="ThumbnailPath"/><br />
                 @*@Html.EditorFor(model => model.ThumbnailPath, new { htmlAttributes = new { @class = "form-control" } })*@
@@ -47,7 +46,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="control-label col-md-2">ชื่อ</div>
             <div class="col-md-10">
                 <input type="file" name="ImagePath" id="ImagePath"/><br />
                 @*@Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control" } })*@
@@ -57,7 +56,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="ยีนยัน" class="btn btn-default" />
             </div>
         </div>
     </div>
